Fix `Expected(unexpect, ...)` https://bugs.webkit.org/show_bug.cgi?id=261485 rdar://problem/115401559

Reviewed by Cameron McCormack.

The constructor taking `unexpect` was using the wrong `value_tag`, in most cases it would
just fail to build (which could explain why it's not used anywhere yet). In the worst
case, it could have built an apparent "expected" result in unexpected situations.

And even after using the correct `error_tag`, the constructor was not passing the correct
argument type to the base constructor.

* Source/WTF/wtf/Expected.h:
(std::experimental::fundamentals_v3::expected::expected):
* Tools/TestWebKitAPI/Tests/WTF/Expected.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/267931@main